--- a/Stone_Ryan_RTOS_Lab2/Stone_Ryan_RTOS_Lab2.ioc
+++ b/Stone_Ryan_RTOS_Lab2/Stone_Ryan_RTOS_Lab2.ioc
@@ -3,12 +3,15 @@ CAD.formats=
 CAD.pinconfig=
 CAD.provider=
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F429ZIT6
 Mcu.Family=STM32F4
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
-Mcu.IPNb=2
+Mcu.IP2=SPI5
+Mcu.IP3=SYS
+Mcu.IPNb=4
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
@@ -103,7 +106,8 @@ Mcu.Pin89=PB9
 Mcu.Pin9=PF8
 Mcu.Pin90=PE0
 Mcu.Pin91=PE1
-Mcu.PinsNb=92
+Mcu.Pin92=VP_SYS_VS_Systick
+Mcu.PinsNb=93
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -122,7 +126,7 @@ NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0/WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA0/WKUP.GPIO_Label=B1 [Blue PushButton]
-PA0/WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_EVT_RISING
+PA0/WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
 PA0/WKUP.GPIO_PuPd=GPIO_NOPULL
 PA0/WKUP.Locked=true
 PA0/WKUP.Signal=GPXTI0
@@ -617,6 +621,7 @@ PF7.GPIO_Mode=GPIO_MODE_AF_PP
 PF7.GPIO_PuPd=GPIO_NOPULL
 PF7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF7.Locked=true
+PF7.Mode=Full_Duplex_Master
 PF7.Signal=SPI5_SCK
 PF8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PF8.GPIO_Label=SPI5_MISO [L3GD20_SDO]
@@ -624,6 +629,7 @@ PF8.GPIO_Mode=GPIO_MODE_AF_PP
 PF8.GPIO_PuPd=GPIO_NOPULL
 PF8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF8.Locked=true
+PF8.Mode=Full_Duplex_Master
 PF8.Signal=SPI5_MISO
 PF9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PF9.GPIO_Label=SPI5_MOSI [L3GD20_SDA/SDI/SDO]
@@ -631,6 +637,7 @@ PF9.GPIO_Mode=GPIO_MODE_AF_PP
 PF9.GPIO_PuPd=GPIO_NOPULL
 PF9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF9.Locked=true
+PF9.Mode=Full_Duplex_Master
 PF9.Signal=SPI5_MOSI
 PG0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG0.GPIO_Label=A10
@@ -750,7 +757,7 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=Stone_Ryan_RTOS_Lab2.ioc
 ProjectManager.ProjectName=Stone_Ryan_RTOS_Lab2
@@ -886,6 +893,13 @@ SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
 SH.GPXTI5.0=GPIO_EXTI5
 SH.GPXTI5.ConfNb=1
+SPI5.CalculateBaudRate=3.125 MBits/s
+SPI5.Direction=SPI_DIRECTION_2LINES
+SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI5.Mode=SPI_MODE_MASTER
+SPI5.VirtualType=VM_MASTER
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=STM32F429I-DISC1
 boardIOC=true
 isbadioc=false
