--- a/Stone_Ryan_RTOS_Lab3/Stone_Ryan_RTOS_Lab3.ioc
+++ b/Stone_Ryan_RTOS_Lab3/Stone_Ryan_RTOS_Lab3.ioc
@@ -860,7 +860,7 @@ ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
 ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
-ProjectManager.PreviousToolchain=
+ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=Stone_Ryan_RTOS_Lab3.ioc
 ProjectManager.ProjectName=Stone_Ryan_RTOS_Lab3
@@ -1033,4 +1033,5 @@ VP_USB_HOST_VS_USB_HOST_CDC_HS.Mode=CDC_HS
 VP_USB_HOST_VS_USB_HOST_CDC_HS.Signal=USB_HOST_VS_USB_HOST_CDC_HS
 board=STM32F429I-DISC1
 boardIOC=true
+rtos.0.ip=FREERTOS
 isbadioc=false
