--- a/lab6/LastName_FirstName_RTOS_Lab6_ITC/Stone_Ryan_RTOS_Lab6_ITC.ioc
+++ b/lab6/LastName_FirstName_RTOS_Lab6_ITC/Stone_Ryan_RTOS_Lab6_ITC.ioc
@@ -116,10 +116,11 @@ Mcu.PinsNb=94
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
-MxCube.Version=6.9.1
-MxDb.Version=DB.6.0.91
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:13\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -767,8 +768,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=LastName_FirstName_RTOS_Lab6_ITC.ioc
-ProjectManager.ProjectName=LastName_FirstName_RTOS_Lab6_ITC
+ProjectManager.ProjectFileName=Stone_Ryan_RTOS_Lab6_ITC.ioc
+ProjectManager.ProjectName=Stone_Ryan_RTOS_Lab6_ITC
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
