--- a/lab6/LastName_FirstName_RTOS_Lab6_ITC/LastName_FirstName_RTOS_Lab6_ITC.ioc
+++ b/lab6/LastName_FirstName_RTOS_Lab6_ITC/LastName_FirstName_RTOS_Lab6_ITC.ioc
@@ -14,8 +14,9 @@ Mcu.IP0=FREERTOS
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SPI5
-Mcu.IP4=TIM11
-Mcu.IPNb=5
+Mcu.IP4=SYS
+Mcu.IP5=TIM11
+Mcu.IPNb=6
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
@@ -111,8 +112,9 @@ Mcu.Pin9=PF8
 Mcu.Pin90=PE0
 Mcu.Pin91=PE1
 Mcu.Pin92=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin93=VP_TIM11_VS_ClockSourceINT
-Mcu.PinsNb=94
+Mcu.Pin93=VP_SYS_VS_Systick
+Mcu.Pin94=VP_TIM11_VS_ClockSourceINT
+Mcu.PinsNb=95
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
@@ -120,7 +122,6 @@ MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
-NVIC.EXTI0_IRQn=true\:13\:0\:true\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -768,8 +769,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=Stone_Ryan_RTOS_Lab6_ITC.ioc
-ProjectManager.ProjectName=Stone_Ryan_RTOS_Lab6_ITC
+ProjectManager.ProjectFileName=LastName_FirstName_RTOS_Lab6_ITC.ioc
+ProjectManager.ProjectName=LastName_FirstName_RTOS_Lab6_ITC
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -778,7 +779,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI5_Init-SPI5-false-HAL-true,4-MX_TIM11_Init-TIM11-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI5_Init-SPI5-false-HAL-true,4-MX_TIM11_Init-TIM11-false-HAL-true,5-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.48MHZClocksFreq_Value=14285714.285714285
 RCC.AHBFreq_Value=25000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV8
@@ -911,6 +912,8 @@ TIM11.IPParameters=Period
 TIM11.Period=124
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 board=STM32F429I-DISC1
