--- a/Lastname_Firstname_RTOS_Lab7_Mutex/Lastname_Firstname_RTOS_Lab7_Mutex.ioc
+++ b/Lastname_Firstname_RTOS_Lab7_Mutex/Lastname_Firstname_RTOS_Lab7_Mutex.ioc
@@ -2,20 +2,27 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+DMA2D.ColorMode=DMA2D_OUTPUT_RGB565
+DMA2D.IPParameters=ColorMode
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.CPN=STM32F429ZIT6
 Mcu.Family=STM32F4
-Mcu.IP0=FREERTOS
-Mcu.IP1=LTDC
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI5
-Mcu.IP5=TIM11
-Mcu.IPNb=6
+Mcu.IP0=DMA2D
+Mcu.IP1=FMC
+Mcu.IP2=FREERTOS
+Mcu.IP3=I2C3
+Mcu.IP4=LTDC
+Mcu.IP5=NVIC
+Mcu.IP6=RCC
+Mcu.IP7=SPI5
+Mcu.IP8=SYS
+Mcu.IP9=TIM11
+Mcu.IPNb=10
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
@@ -110,14 +117,16 @@ Mcu.Pin89=PB9
 Mcu.Pin9=PF8
 Mcu.Pin90=PE0
 Mcu.Pin91=PE1
-Mcu.Pin92=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin93=VP_TIM11_VS_ClockSourceINT
-Mcu.PinsNb=94
+Mcu.Pin92=VP_DMA2D_VS_DMA2D
+Mcu.Pin93=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin94=VP_SYS_VS_Systick
+Mcu.Pin95=VP_TIM11_VS_ClockSourceINT
+Mcu.PinsNb=96
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
-MxCube.Version=6.9.1
-MxDb.Version=DB.6.0.91
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
@@ -154,7 +163,7 @@ PA11.GPIO_Mode=GPIO_MODE_AF_PP
 PA11.GPIO_PuPd=GPIO_NOPULL
 PA11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA11.Locked=true
-PA11.Mode=RGB565
+PA11.Mode=RGB666
 PA11.Signal=LTDC_R4
 PA12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA12.GPIO_Label=R5
@@ -162,7 +171,7 @@ PA12.GPIO_Mode=GPIO_MODE_AF_PP
 PA12.GPIO_PuPd=GPIO_NOPULL
 PA12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA12.Locked=true
-PA12.Mode=RGB565
+PA12.Mode=RGB666
 PA12.Signal=LTDC_R5
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDIO
@@ -190,7 +199,7 @@ PA3.GPIO_Mode=GPIO_MODE_AF_PP
 PA3.GPIO_PuPd=GPIO_NOPULL
 PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
-PA3.Mode=RGB565
+PA3.Mode=RGB666
 PA3.Signal=LTDC_B5
 PA4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA4.GPIO_Label=VSYNC
@@ -198,7 +207,7 @@ PA4.GPIO_Mode=GPIO_MODE_AF_PP
 PA4.GPIO_PuPd=GPIO_NOPULL
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA4.Locked=true
-PA4.Mode=RGB565
+PA4.Mode=RGB666
 PA4.Signal=LTDC_VSYNC
 PA6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA6.GPIO_Label=G2
@@ -206,7 +215,7 @@ PA6.GPIO_Mode=GPIO_MODE_AF_PP
 PA6.GPIO_PuPd=GPIO_NOPULL
 PA6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA6.Locked=true
-PA6.Mode=RGB565
+PA6.Mode=RGB666
 PA6.Signal=LTDC_G2
 PA7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA7.GPIO_Label=ACP_RST
@@ -221,6 +230,7 @@ PA8.GPIO_Mode=GPIO_MODE_AF_OD
 PA8.GPIO_PuPd=GPIO_NOPULL
 PA8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA8.Locked=true
+PA8.Mode=I2C
 PA8.Signal=I2C3_SCL
 PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=STLINK_RX [STM32F103CBT6_PA3]
@@ -232,7 +242,7 @@ PB0.GPIO_Mode=GPIO_MODE_AF_PP
 PB0.GPIO_PuPd=GPIO_NOPULL
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB0.Locked=true
-PB0.Mode=RGB565
+PB0.Mode=RGB666
 PB0.Signal=LTDC_R3
 PB1.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB1.GPIO_Label=R6
@@ -240,7 +250,7 @@ PB1.GPIO_Mode=GPIO_MODE_AF_PP
 PB1.GPIO_PuPd=GPIO_NOPULL
 PB1.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB1.Locked=true
-PB1.Mode=RGB565
+PB1.Mode=RGB666
 PB1.Signal=LTDC_R6
 PB10.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB10.GPIO_Label=G4
@@ -248,7 +258,7 @@ PB10.GPIO_Mode=GPIO_MODE_AF_PP
 PB10.GPIO_PuPd=GPIO_NOPULL
 PB10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB10.Locked=true
-PB10.Mode=RGB565
+PB10.Mode=RGB666
 PB10.Signal=LTDC_G4
 PB11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB11.GPIO_Label=G5
@@ -256,7 +266,7 @@ PB11.GPIO_Mode=GPIO_MODE_AF_PP
 PB11.GPIO_PuPd=GPIO_NOPULL
 PB11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB11.Locked=true
-PB11.Mode=RGB565
+PB11.Mode=RGB666
 PB11.Signal=LTDC_G5
 PB12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB12.GPIO_Label=OTG_HS_ID
@@ -297,6 +307,7 @@ PB5.GPIO_Mode=GPIO_MODE_AF_PP
 PB5.GPIO_PuPd=GPIO_NOPULL
 PB5.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB5.Locked=true
+PB5.Mode=SdramChipSelect2_2
 PB5.Signal=FMC_SDCKE1
 PB6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB6.GPIO_Label=SDNE1 [SDRAM_CS]
@@ -304,6 +315,7 @@ PB6.GPIO_Mode=GPIO_MODE_AF_PP
 PB6.GPIO_PuPd=GPIO_NOPULL
 PB6.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB6.Locked=true
+PB6.Mode=SdramChipSelect2_2
 PB6.Signal=FMC_SDNE1
 PB8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB8.GPIO_Label=B6
@@ -311,7 +323,7 @@ PB8.GPIO_Mode=GPIO_MODE_AF_PP
 PB8.GPIO_PuPd=GPIO_NOPULL
 PB8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB8.Locked=true
-PB8.Mode=RGB565
+PB8.Mode=RGB666
 PB8.Signal=LTDC_B6
 PB9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PB9.GPIO_Label=B7
@@ -319,7 +331,7 @@ PB9.GPIO_Mode=GPIO_MODE_AF_PP
 PB9.GPIO_PuPd=GPIO_NOPULL
 PB9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PB9.Locked=true
-PB9.Mode=RGB565
+PB9.Mode=RGB666
 PB9.Signal=LTDC_B7
 PC0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC0.GPIO_Label=SDNWE
@@ -341,6 +353,7 @@ PC10.GPIO_Mode=GPIO_MODE_AF_PP
 PC10.GPIO_PuPd=GPIO_NOPULL
 PC10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC10.Locked=true
+PC10.Mode=RGB666
 PC10.Signal=LTDC_R2
 PC14/OSC32_IN.GPIOParameters=GPIO_Label
 PC14/OSC32_IN.GPIO_Label=PC14-OSC32_IN
@@ -375,7 +388,7 @@ PC6.GPIO_Mode=GPIO_MODE_AF_PP
 PC6.GPIO_PuPd=GPIO_NOPULL
 PC6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC6.Locked=true
-PC6.Mode=RGB565
+PC6.Mode=RGB666
 PC6.Signal=LTDC_HSYNC
 PC7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC7.GPIO_Label=G6
@@ -383,7 +396,7 @@ PC7.GPIO_Mode=GPIO_MODE_AF_PP
 PC7.GPIO_PuPd=GPIO_NOPULL
 PC7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC7.Locked=true
-PC7.Mode=RGB565
+PC7.Mode=RGB666
 PC7.Signal=LTDC_G6
 PC9.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PC9.GPIO_Label=I2C3_SDA [ACP/RF_SDA]
@@ -391,6 +404,7 @@ PC9.GPIO_Mode=GPIO_MODE_AF_OD
 PC9.GPIO_PuPd=GPIO_NOPULL
 PC9.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PC9.Locked=true
+PC9.Mode=I2C
 PC9.Signal=I2C3_SDA
 PD0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PD0.GPIO_Label=D2
@@ -453,7 +467,7 @@ PD3.GPIO_Mode=GPIO_MODE_AF_PP
 PD3.GPIO_PuPd=GPIO_NOPULL
 PD3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD3.Locked=true
-PD3.Mode=RGB565
+PD3.Mode=RGB666
 PD3.Signal=LTDC_G7
 PD6.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PD6.GPIO_Label=B2
@@ -461,6 +475,7 @@ PD6.GPIO_Mode=GPIO_MODE_AF_PP
 PD6.GPIO_PuPd=GPIO_NOPULL
 PD6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PD6.Locked=true
+PD6.Mode=RGB666
 PD6.Signal=LTDC_B2
 PD8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PD8.GPIO_Label=D13
@@ -573,7 +588,7 @@ PF10.GPIO_Mode=GPIO_MODE_AF_PP
 PF10.GPIO_PuPd=GPIO_NOPULL
 PF10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PF10.Locked=true
-PF10.Mode=RGB565
+PF10.Mode=RGB666
 PF10.Signal=LTDC_DE
 PF11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PF11.GPIO_Label=SDNRAS
@@ -682,7 +697,7 @@ PG10.GPIO_Mode=GPIO_MODE_AF_PP
 PG10.GPIO_PuPd=GPIO_NOPULL
 PG10.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG10.Locked=true
-PG10.Mode=RGB565
+PG10.Mode=RGB666
 PG10.Signal=LTDC_G3
 PG11.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG11.GPIO_Label=B3
@@ -690,7 +705,7 @@ PG11.GPIO_Mode=GPIO_MODE_AF_PP
 PG11.GPIO_PuPd=GPIO_NOPULL
 PG11.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG11.Locked=true
-PG11.Mode=RGB565
+PG11.Mode=RGB666
 PG11.Signal=LTDC_B3
 PG12.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG12.GPIO_Label=B4
@@ -698,7 +713,7 @@ PG12.GPIO_Mode=GPIO_MODE_AF_PP
 PG12.GPIO_PuPd=GPIO_NOPULL
 PG12.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG12.Locked=true
-PG12.Mode=RGB565
+PG12.Mode=RGB666
 PG12.Signal=LTDC_B4
 PG13.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG13.GPIO_Label=LD3 [Green Led]
@@ -741,7 +756,7 @@ PG6.GPIO_Mode=GPIO_MODE_AF_PP
 PG6.GPIO_PuPd=GPIO_NOPULL
 PG6.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG6.Locked=true
-PG6.Mode=RGB565
+PG6.Mode=RGB666
 PG6.Signal=LTDC_R7
 PG7.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG7.GPIO_Label=DOTCLK [LCT-RGB_DOTCLK]
@@ -749,7 +764,7 @@ PG7.GPIO_Mode=GPIO_MODE_AF_PP
 PG7.GPIO_PuPd=GPIO_NOPULL
 PG7.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PG7.Locked=true
-PG7.Mode=RGB565
+PG7.Mode=RGB666
 PG7.Signal=LTDC_CLK
 PG8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PG8.GPIO_Label=SDCLK
@@ -761,10 +776,12 @@ PG8.Signal=FMC_SDCLK
 PH0/OSC_IN.GPIOParameters=GPIO_Label
 PH0/OSC_IN.GPIO_Label=PH0-OSC_IN
 PH0/OSC_IN.Locked=true
+PH0/OSC_IN.Mode=HSE-External-Oscillator
 PH0/OSC_IN.Signal=RCC_OSC_IN
 PH1/OSC_OUT.GPIOParameters=GPIO_Label
 PH1/OSC_OUT.GPIO_Label=PH1-OSC_OUT
 PH1/OSC_OUT.Locked=true
+PH1/OSC_OUT.Mode=HSE-External-Oscillator
 PH1/OSC_OUT.Signal=RCC_OSC_OUT
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
@@ -797,7 +814,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI5_Init-SPI5-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true,5-MX_TIM11_Init-TIM11-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI5_Init-SPI5-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true,5-MX_TIM11_Init-TIM11-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true,7-MX_FMC_Init-FMC-false-HAL-true
 RCC.48MHZClocksFreq_Value=14285714.285714285
 RCC.AHBFreq_Value=25000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV8
@@ -840,77 +857,77 @@ RCC.VCOSAIOutputFreq_ValueQ=25000000
 RCC.VCOSAIOutputFreq_ValueR=50000000
 RCC.VcooutputI2S=192000000
 RCC.VcooutputI2SQ=192000000
-SH.FMC_A0.0=FMC_A0
+SH.FMC_A0.0=FMC_A0,12b-sda2
 SH.FMC_A0.ConfNb=1
-SH.FMC_A1.0=FMC_A1
+SH.FMC_A1.0=FMC_A1,12b-sda2
 SH.FMC_A1.ConfNb=1
-SH.FMC_A10.0=FMC_A10
+SH.FMC_A10.0=FMC_A10,12b-sda2
 SH.FMC_A10.ConfNb=1
-SH.FMC_A11.0=FMC_A11
+SH.FMC_A11.0=FMC_A11,12b-sda2
 SH.FMC_A11.ConfNb=1
-SH.FMC_A14_BA0.0=FMC_BA0
+SH.FMC_A14_BA0.0=FMC_BA0,FourSdramBanks2
 SH.FMC_A14_BA0.ConfNb=1
-SH.FMC_A15_BA1.0=FMC_BA1
+SH.FMC_A15_BA1.0=FMC_BA1,FourSdramBanks2
 SH.FMC_A15_BA1.ConfNb=1
-SH.FMC_A2.0=FMC_A2
+SH.FMC_A2.0=FMC_A2,12b-sda2
 SH.FMC_A2.ConfNb=1
-SH.FMC_A3.0=FMC_A3
+SH.FMC_A3.0=FMC_A3,12b-sda2
 SH.FMC_A3.ConfNb=1
-SH.FMC_A4.0=FMC_A4
+SH.FMC_A4.0=FMC_A4,12b-sda2
 SH.FMC_A4.ConfNb=1
-SH.FMC_A5.0=FMC_A5
+SH.FMC_A5.0=FMC_A5,12b-sda2
 SH.FMC_A5.ConfNb=1
-SH.FMC_A6.0=FMC_A6
+SH.FMC_A6.0=FMC_A6,12b-sda2
 SH.FMC_A6.ConfNb=1
-SH.FMC_A7.0=FMC_A7
+SH.FMC_A7.0=FMC_A7,12b-sda2
 SH.FMC_A7.ConfNb=1
-SH.FMC_A8.0=FMC_A8
+SH.FMC_A8.0=FMC_A8,12b-sda2
 SH.FMC_A8.ConfNb=1
-SH.FMC_A9.0=FMC_A9
+SH.FMC_A9.0=FMC_A9,12b-sda2
 SH.FMC_A9.ConfNb=1
-SH.FMC_D0_DA0.0=FMC_D0
+SH.FMC_D0_DA0.0=FMC_D0,sd-16b-d2
 SH.FMC_D0_DA0.ConfNb=1
-SH.FMC_D10_DA10.0=FMC_D10
+SH.FMC_D10_DA10.0=FMC_D10,sd-16b-d2
 SH.FMC_D10_DA10.ConfNb=1
-SH.FMC_D11_DA11.0=FMC_D11
+SH.FMC_D11_DA11.0=FMC_D11,sd-16b-d2
 SH.FMC_D11_DA11.ConfNb=1
-SH.FMC_D12_DA12.0=FMC_D12
+SH.FMC_D12_DA12.0=FMC_D12,sd-16b-d2
 SH.FMC_D12_DA12.ConfNb=1
-SH.FMC_D13_DA13.0=FMC_D13
+SH.FMC_D13_DA13.0=FMC_D13,sd-16b-d2
 SH.FMC_D13_DA13.ConfNb=1
-SH.FMC_D14_DA14.0=FMC_D14
+SH.FMC_D14_DA14.0=FMC_D14,sd-16b-d2
 SH.FMC_D14_DA14.ConfNb=1
-SH.FMC_D15_DA15.0=FMC_D15
+SH.FMC_D15_DA15.0=FMC_D15,sd-16b-d2
 SH.FMC_D15_DA15.ConfNb=1
-SH.FMC_D1_DA1.0=FMC_D1
+SH.FMC_D1_DA1.0=FMC_D1,sd-16b-d2
 SH.FMC_D1_DA1.ConfNb=1
-SH.FMC_D2_DA2.0=FMC_D2
+SH.FMC_D2_DA2.0=FMC_D2,sd-16b-d2
 SH.FMC_D2_DA2.ConfNb=1
-SH.FMC_D3_DA3.0=FMC_D3
+SH.FMC_D3_DA3.0=FMC_D3,sd-16b-d2
 SH.FMC_D3_DA3.ConfNb=1
-SH.FMC_D4_DA4.0=FMC_D4
+SH.FMC_D4_DA4.0=FMC_D4,sd-16b-d2
 SH.FMC_D4_DA4.ConfNb=1
-SH.FMC_D5_DA5.0=FMC_D5
+SH.FMC_D5_DA5.0=FMC_D5,sd-16b-d2
 SH.FMC_D5_DA5.ConfNb=1
-SH.FMC_D6_DA6.0=FMC_D6
+SH.FMC_D6_DA6.0=FMC_D6,sd-16b-d2
 SH.FMC_D6_DA6.ConfNb=1
-SH.FMC_D7_DA7.0=FMC_D7
+SH.FMC_D7_DA7.0=FMC_D7,sd-16b-d2
 SH.FMC_D7_DA7.ConfNb=1
-SH.FMC_D8_DA8.0=FMC_D8
+SH.FMC_D8_DA8.0=FMC_D8,sd-16b-d2
 SH.FMC_D8_DA8.ConfNb=1
-SH.FMC_D9_DA9.0=FMC_D9
+SH.FMC_D9_DA9.0=FMC_D9,sd-16b-d2
 SH.FMC_D9_DA9.ConfNb=1
 SH.FMC_NBL0.0=FMC_NBL0
 SH.FMC_NBL0.ConfNb=1
 SH.FMC_NBL1.0=FMC_NBL1
 SH.FMC_NBL1.ConfNb=1
-SH.FMC_SDCLK.0=FMC_SDCLK
+SH.FMC_SDCLK.0=FMC_SDCLK,12b-sda2
 SH.FMC_SDCLK.ConfNb=1
-SH.FMC_SDNCAS.0=FMC_SDNCAS
+SH.FMC_SDNCAS.0=FMC_SDNCAS,12b-sda2
 SH.FMC_SDNCAS.ConfNb=1
-SH.FMC_SDNRAS.0=FMC_SDNRAS
+SH.FMC_SDNRAS.0=FMC_SDNRAS,12b-sda2
 SH.FMC_SDNRAS.ConfNb=1
-SH.FMC_SDNWE.0=FMC_SDNWE
+SH.FMC_SDNWE.0=FMC_SDNWE,12b-sda2
 SH.FMC_SDNWE.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
@@ -927,8 +944,12 @@ SPI5.Direction=SPI_DIRECTION_2LINES
 SPI5.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI5.Mode=SPI_MODE_MASTER
 SPI5.VirtualType=VM_MASTER
+VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
+VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
 VP_TIM11_VS_ClockSourceINT.Signal=TIM11_VS_ClockSourceINT
 board=STM32F429I-DISC1
