--- a/Lastname_Firstname_RTOS_Lab7_Mutex/Lastname_Firstname_RTOS_Lab7_Mutex.ioc
+++ b/Lastname_Firstname_RTOS_Lab7_Mutex/Lastname_Firstname_RTOS_Lab7_Mutex.ioc
@@ -129,6 +129,7 @@ MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI0_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
@@ -814,7 +815,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI5_Init-SPI5-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true,5-MX_TIM11_Init-TIM11-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true,7-MX_FMC_Init-FMC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI5_Init-SPI5-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true,5-MX_TIM11_Init-TIM11-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true,7-MX_FMC_Init-FMC-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.48MHZClocksFreq_Value=14285714.285714285
 RCC.AHBFreq_Value=25000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV8
