--- a/Stone_Ryan_RTOS_FinalProject/Stone_Ryan_RTOS_FinalProject.ioc
+++ b/Stone_Ryan_RTOS_FinalProject/Stone_Ryan_RTOS_FinalProject.ioc
@@ -1,4 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
+ARM.CMSIS.5.9.0.CMSISJjCORE_Checked=false
+ARM.CMSIS.5.9.0.CMSISJjDSP_Checked=false
+ARM.CMSIS.5.9.0_SwParameter=CMSISJjDSP\:Source;CMSISJjCORE\:true;
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -14,15 +17,16 @@ Mcu.CPN=STM32F429ZIT6
 Mcu.Family=STM32F4
 Mcu.IP0=DMA2D
 Mcu.IP1=FMC
+Mcu.IP10=TIM11
 Mcu.IP2=FREERTOS
 Mcu.IP3=I2C3
 Mcu.IP4=LTDC
 Mcu.IP5=NVIC
 Mcu.IP6=RCC
-Mcu.IP7=SPI5
-Mcu.IP8=SYS
-Mcu.IP9=TIM11
-Mcu.IPNb=10
+Mcu.IP7=RNG
+Mcu.IP8=SPI5
+Mcu.IP9=SYS
+Mcu.IPNb=11
 Mcu.Name=STM32F429ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC14/OSC32_IN
@@ -119,10 +123,12 @@ Mcu.Pin90=PE0
 Mcu.Pin91=PE1
 Mcu.Pin92=VP_DMA2D_VS_DMA2D
 Mcu.Pin93=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin94=VP_SYS_VS_Systick
-Mcu.Pin95=VP_TIM11_VS_ClockSourceINT
-Mcu.PinsNb=96
-Mcu.ThirdPartyNb=0
+Mcu.Pin94=VP_RNG_VS_RNG
+Mcu.Pin95=VP_SYS_VS_Systick
+Mcu.Pin96=VP_TIM11_VS_ClockSourceINT
+Mcu.PinsNb=97
+Mcu.ThirdParty0=ARM.CMSIS.5.9.0
+Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
 MxCube.Version=6.10.0
@@ -814,7 +820,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI5_Init-SPI5-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true,5-MX_TIM11_Init-TIM11-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true,7-MX_FMC_Init-FMC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI5_Init-SPI5-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true,5-MX_TIM11_Init-TIM11-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true,7-MX_FMC_Init-FMC-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true
 RCC.48MHZClocksFreq_Value=14285714.285714285
 RCC.AHBFreq_Value=25000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV8
@@ -948,6 +954,8 @@ VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
 VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
+VP_RNG_VS_RNG.Mode=RNG_Activate
+VP_RNG_VS_RNG.Signal=RNG_VS_RNG
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM11_VS_ClockSourceINT.Mode=Enable_Timer
