--- a/Stone_Ryan_RTOS_FinalProject/Stone_Ryan_RTOS_FinalProject.ioc
+++ b/Stone_Ryan_RTOS_FinalProject/Stone_Ryan_RTOS_FinalProject.ioc
@@ -1,12 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
-ARM.CMSIS.5.9.0.CMSISJjCORE_Checked=false
-ARM.CMSIS.5.9.0.CMSISJjDSP_Checked=false
-ARM.CMSIS.5.9.0_SwParameter=CMSISJjDSP\:Source;CMSISJjCORE\:true;
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-DMA2D.ColorMode=DMA2D_OUTPUT_RGB565
-DMA2D.IPParameters=ColorMode
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT
 FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
@@ -127,8 +122,7 @@ Mcu.Pin94=VP_RNG_VS_RNG
 Mcu.Pin95=VP_SYS_VS_Systick
 Mcu.Pin96=VP_TIM11_VS_ClockSourceINT
 Mcu.PinsNb=97
-Mcu.ThirdParty0=ARM.CMSIS.5.9.0
-Mcu.ThirdPartyNb=1
+Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F429ZITx
 MxCube.Version=6.10.0
@@ -820,7 +814,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI5_Init-SPI5-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true,5-MX_TIM11_Init-TIM11-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true,7-MX_FMC_Init-FMC-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI5_Init-SPI5-false-HAL-true,4-MX_LTDC_Init-LTDC-false-HAL-true,5-MX_TIM11_Init-TIM11-false-HAL-true,6-MX_DMA2D_Init-DMA2D-false-HAL-true,7-MX_FMC_Init-FMC-false-HAL-true,8-MX_I2C3_Init-I2C3-false-HAL-true,9-MX_RNG_Init-RNG-false-HAL-true
 RCC.48MHZClocksFreq_Value=14285714.285714285
 RCC.AHBFreq_Value=25000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV8
